# git-init

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PROMPT_RU.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
alembic/: env.py
alembic/versions/: 20260323_0001_slice1_foundation.py  20260323_0002_slice2_ingestion.py  20260323_0003_slice3_events.py
app/api/: main.py
app/api/routes/: __init__.py  internal.py
app/bot/: dispatcher.py  texts.py
app/bot/handlers/: common.py
app/bot/keyboards/: reply.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  delivery.py  event.py  event_category.py  event_source.py  event_tag.py  raw_item.py  source.py  source_run.py  user.py
app/jobs/: ingest_job.py  process_events_job.py  scheduler.py
app/services/: delivery_service.py  user_service.py
app/services/classification/: __init__.py  classifier.py  rules.py
app/services/clustering/: __init__.py  cluster_engine.py
app/services/events/: __init__.py  process_events.py
app/services/ingestion/: __init__.py  adapter_registry.py  ingestion_service.py  (+1 more)
scripts/: run_bot.py  seed_sources.py  seed_test_data.py
src/: index.ts
src/config/: env.ts
src/mcp/: auth.ts  schemas.ts  server.ts  tools.ts
src/tourvisor/: client.ts  dictionaries.ts  endpoints.ts  normalizers.ts  polling.ts
src/utils/: rateLimit.ts
tests/: conftest.py  get_dictionaries.test.ts  polling.test.ts  search_tours.test.ts  test_api_health.py  test_events_pipeline.py  test_ingestion.py  test_services.py
(+11 files in other folders)
